@@ -55,81 +55,32 @@ static int parseWeather(const char *line, WRrow *wr, char *antName)
 	return 1;
 }
 
-const DifxInput *DifxInput2FitsWR(const DifxInput *D, struct fits_keywords *p_fits_keys, struct fitsPrivate *out)
+int processWeatherFile(const DifxInput *D, const char *antennaName, const char *weatherFile, struct fitsPrivate *out, char **fitsbuf, int nRowBytes, int nColumn, const struct fitsBinTableColumn *columns, const int *alreadyHasWeather, int refDay, int year, double *mjdLast)
 {
 	const int MaxLineLength=1000;
-
-	/*  define the flag FITS table columns */
-	struct fitsBinTableColumn columns[] =
-	{
-		{"TIME", "1D", "time of measurement", "DAYS"},
-		{"TIME_INTERVAL", "1E", "time span over which data applies", "DAYS"},
-		{"ANTENNA_NO", "1J", "antenna id from antennas tbl", 0},
-		{"TEMPERATURE", "1E", "ambient temperature", "CENTIGRADE"},
-		{"PRESSURE", "1E", "atmospheric pressuresure", "MILLIBARS"},
-		{"DEWPOINT", "1E", "dewpoint", "CENTIGRADE"},
-		{"WIND_VELOCITY", "1E", "wind velocity", "M/SEC"},
-		{"WIND_DIRECTION", "1E", "wind direction", "DEGREES"},
-		{"WIND_GUST", "1E", "wind gust", "M/SEC"},
-		{"PRECIPITATION", "1E", "integrated rain since midnight", "CM"},
-		{"WVR_H2O", "0E", "", ""},
-		{"IONOS_ELECTRON", "0E", "", ""}
-	};
-
-	WRrow wr;
-	int i;
-	int nColumn;
-	int nRowBytes;
-	char **fitsbuf, *p_fitsbuf;
-	char antName[DIFXIO_NAME_LENGTH];
 	char line[MaxLineLength+1];
-	double mjd;
-	int refDay;
-	double time;
-	float timeInt;
+	char antName[DIFXIO_NAME_LENGTH];
 	FILE *in;
-	int antId;
-	char *rv;
-	double *mjdLast;
-	int year, month, day;
-	/* 1-based index for FITS below */
-	int32_t antId1;
+	int nRec = 0;
+	WRrow wr;
+	double mjd;
 
-	if(D == 0) return D;
-	
 	in = fopen("weather", "r");
-	
 	if(!in)
 	{
-		return D;
+		return 0;
 	}
 
-	nColumn = NELEMENTS(columns);
-	
-	nRowBytes = FitsBinTableSize(columns, nColumn);
-
-	/* calloc space for storing table in FITS format */
-	fitsbuf = (char **)malloc(D->nAntenna*sizeof(char *));
-	for(i = 0; i < D->nAntenna; ++i)
-	{
-		fitsbuf[i] = (char *)calloc(nRowBytes, 1);
-	}
-
-	mjdLast = (double *)calloc(D->nAntenna, sizeof(double));
-
-	mjd2dayno((int)(D->mjdStart), &refDay);
-	mjd2date((int)(D->mjdStart), &year, &month, &day);
-
-	fitsWriteBinTable(out, nColumn, columns, nRowBytes, "WEATHER");
-	arrayWriteKeys(p_fits_keys, out);
-	fitsWriteInteger(out, "TABREV", 1, "");
-	fitsWriteString(out, "MAPFUNC", " ", "");
-	fitsWriteString(out, "WVR_TYPE", " ", "");
-	fitsWriteString(out, "ION_TYPE", " ", "");
-	fitsWriteEnd(out);
-	
 	for(;;)
 	{
+		char *p_fitsbuf;
+		double time;
+		float timeInt;
+		int i, antId;
+		char *rv;
+		/* 1-based index for FITS below */
+		int32_t antId1;
+
 		rv = fgets(line, MaxLineLength, in);
 		if(!rv)
 		{
@@ -152,6 +103,13 @@ const DifxInput *DifxInput2FitsWR(const DifxInput *D, struct fits_keywords *p_fi
 		}
 		if(parseWeather(line, &wr, antName) == 0)
 		{
+			continue;
+		}
+
+		if(antennaName && strcasecmp(antennaName, antName) != 0)
+		{
+			/* mismatched antenna name */
+
 			continue;
 		}
 		
@@ -179,19 +137,25 @@ const DifxInput *DifxInput2FitsWR(const DifxInput *D, struct fits_keywords *p_fi
 		{
 			continue;
 		}
+
+		if(alreadyHasWeather[antId])
+		{
+			/* a higher priority weather file already produced data for this antenna */
+
+			continue;
+		}
+
 		antId1 = antId + 1;
 		
 		/* see if we need to write the preceding record */
 		mjd = time + (int)(D->mjdStart);
-		if(mjd >= D->mjdStart && 
-		   mjdLast[antId] < D->mjdStart && 
-		   mjdLast[antId] > 50000.0)
+		if(mjd >= D->mjdStart && mjdLast[antId] < D->mjdStart && mjdLast[antId] > 50000.0)
 		{
 			fitsWriteBinRow(out, fitsbuf[antId]);
+			++nRec;
 		}
 
-		/* populate data structure for this record, regardless
-		   of whether it will be written or not */
+		/* populate data structure for this record, regardless of whether it will be written or not */
 		p_fitsbuf = fitsbuf[antId];
 		FITS_WRITE_ITEM(time, p_fitsbuf);
 		FITS_WRITE_ITEM(timeInt, p_fitsbuf);
@@ -214,19 +178,117 @@ const DifxInput *DifxInput2FitsWR(const DifxInput *D, struct fits_keywords *p_fi
 		    (mjd > D->mjdStop && mjdLast[antId] < D->mjdStop) )
 		{
 			fitsWriteBinRow(out, fitsbuf[antId]);
+			++nRec;
 		}
 
 		mjdLast[antId] = mjd;
 	}
 
-	/* close the file, free memory, and return */
-	fclose(in);
+	return nRec;
+}
+
+const DifxInput *DifxInput2FitsWR(const DifxInput *D, struct fits_keywords *p_fits_keys, struct fitsPrivate *out)
+{
+	/*  define the flag FITS table columns */
+	struct fitsBinTableColumn columns[] =
+	{
+		{"TIME", "1D", "time of measurement", "DAYS"},
+		{"TIME_INTERVAL", "1E", "time span over which data applies", "DAYS"},
+		{"ANTENNA_NO", "1J", "antenna id from antennas tbl", 0},
+		{"TEMPERATURE", "1E", "ambient temperature", "CENTIGRADE"},
+		{"PRESSURE", "1E", "atmospheric pressuresure", "MILLIBARS"},
+		{"DEWPOINT", "1E", "dewpoint", "CENTIGRADE"},
+		{"WIND_VELOCITY", "1E", "wind velocity", "M/SEC"},
+		{"WIND_DIRECTION", "1E", "wind direction", "DEGREES"},
+		{"WIND_GUST", "1E", "wind gust", "M/SEC"},
+		{"PRECIPITATION", "1E", "integrated rain since midnight", "CM"},
+		{"WVR_H2O", "0E", "", ""},
+		{"IONOS_ELECTRON", "0E", "", ""}
+	};
+
+	int i, v;
+	int nColumn;
+	int nRowBytes;
+	char **fitsbuf;
+	int refDay;
+	int antId;
+	int *alreadyHasWeather;	/* flag per antenna specifying whether or not weather has been found for this antenna yet */
+	double *mjdLast;
+	int year, month, day;
+
+	if(D == 0)
+	{
+		return D;
+	}
+	
+
+	nColumn = NELEMENTS(columns);
+	
+	nRowBytes = FitsBinTableSize(columns, nColumn);
+
+	/* calloc space for storing table in FITS format */
+	fitsbuf = (char **)malloc(D->nAntenna*sizeof(char *));
+	for(i = 0; i < D->nAntenna; ++i)
+	{
+		fitsbuf[i] = (char *)calloc(nRowBytes, 1);
+	}
+
+	mjdLast = (double *)calloc(D->nAntenna, sizeof(double));
+	alreadyHasWeather = (int *)calloc(D->nAntenna, sizeof(int));
+	if(alreadyHasWeather == 0)
+	{
+		fprintf(stderr, "Error: DifxInput2FitsWR: Cannot allocate %d integers for alreadyHasWeather\n", D->nAntenna);
+
+		exit(EXIT_FAILURE);
+	}
+
+	mjd2dayno((int)(D->mjdStart), &refDay);
+	mjd2date((int)(D->mjdStart), &year, &month, &day);
+
+	fitsWriteBinTable(out, nColumn, columns, nRowBytes, "WEATHER");
+	arrayWriteKeys(p_fits_keys, out);
+	fitsWriteInteger(out, "TABREV", 1, "");
+	fitsWriteString(out, "MAPFUNC", " ", "");
+	fitsWriteString(out, "WVR_TYPE", " ", "");
+	fitsWriteString(out, "ION_TYPE", " ", "");
+	fitsWriteEnd(out);
+
+	/* Priority 1: look for station-specific Tsys file with name weather.<station> */
+	for(antId = 0; antId < D->nAntenna; ++antId)
+	{
+		char weatherFile[DIFXIO_FILENAME_LENGTH];
+
+		if(alreadyHasWeather[antId] > 0)
+		{
+			continue;
+		}
+
+		v = snprintf(weatherFile, DIFXIO_FILENAME_LENGTH, "weather.%s", D->antenna[antId].name);
+		if(v >= DIFXIO_FILENAME_LENGTH)
+		{
+			fprintf(stderr, "Developer error: DifxInput2FitsWR: DIFXIO_FILENAME_LENGTH=%d is too small.  Wants to be %d.\n", DIFXIO_FILENAME_LENGTH, v+1);
+
+			exit(0);
+		}
+
+		v = processWeatherFile(D, D->antenna[antId].name, weatherFile, out, fitsbuf, nRowBytes, nColumn, columns, alreadyHasWeather, refDay, year, mjdLast);
+		if(v > 0)
+		{
+			++alreadyHasWeather[antId];
+		}
+	}
+
+	/* Priority 2: look for multi-station weather file called weather */
+	v = processWeatherFile(D, 0, "weather", out, fitsbuf, nRowBytes, nColumn, columns, alreadyHasWeather, refDay, year, mjdLast);
+
+	/*  free memory, and return */
 	for(i = 0; i < D->nAntenna; ++i)
 	{
 		free(fitsbuf[i]);
 	}
 	free(fitsbuf);
 	free(mjdLast);
+	free(alreadyHasWeather);
 
 	return D;
 }
